2005-05-24  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/util.rb (Util::sendmail): make a MIME encoded subject.
	(Util::send_updating_mail): use 'site_name' as a prefix of a
	subject (by kdmsnr).

2005-05-22  KOMATSU Shinichiro <koma2@lovepeers.org>
	* misc/plugin/attach/attach.cgi (attach_file): If the attached file 
	contains scripts, deny it. ([Hiki-dev:00747])

2005-05-21  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/image_size.rb (ImageSize::check_type): revise HTML
	detection algorithm.

2005-05-21  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/image_size.rb (ImageSize::check_type): revise HTML
	detection algorithm.

	* misc/plugin/attach/attach.rb (attach_download): use 'image_size'
	library and set 'Content-Disposition: inline' if an attached file
	is an image.
	* hiki/image_size.rb: add a new file made by Keisuke Minami.
	(ImageSize::mime_type): add a new method.
	(ImageSize::check_type): treat as non-image file if 'script' tags
	are included.

	* misc/hikifarm/index.cgi: support symlinks.

2005-05-21  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hikifarm/{index.cgi,hikifarm.conf,template/*}: separate
	template files of Hikifarm.

2005-05-21  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: support RSS output and add a link to a
	wiki without any page by Kouhei Sutou.

	* misc/hikifarm/index.cgi: define 'hikifarm_path' automatically.

2005-05-19  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: support hiki.conf made by hiki 0.6.x.

2005-05-19  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki.cgi: use CGI.escapeHTML.

2005-05-19  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki.cgi: use text/html (not text/plain) to show error page
	when an exception is raised.

2005-05-17  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/local_css.rb: remove. use 'append-css.rb' instead.

	* hiki/util.rb: change the class name from 'DocDiff' to 'Diff'.
	* hiki/config.rb: add a new constant 'HIKI_RELEASE_DATE'.

2005-05-12  Kazuhiko  <kazuhiko@fdiary.net>